deployment/cicd/kustomize/overlays/staging/deployment-api-gateway-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: api-gateway
        resources:
          requests:
            memory: "512Mi"
            cpu: "512m"
          limits:
            memory: "2048Mi"
            cpu: "2048m"
