deployment/cicd/kustomize/overlays/staging/deployment-bill-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-service
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: bill-service
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
