deployment/cicd/kustomize/overlays/staging/deployment-kos-mock-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kos-mock
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: kos-mock
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
