deployment/cicd/kustomize/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: api-gateway
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: user-service
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-service
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: bill-service
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: product-service
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kos-mock
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: kos-mock
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
          limits:
            cpu: 2048m
            memory: 2048Mi
