deployment/cicd/kustomize/overlays/staging/deployment-product-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: product-service
          image: acrdigitalgarage01.azurecr.io/phonebill-product-service:staging-latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "512m"
            limits:
              memory: "2048Mi"
              cpu: "2048m"
